1º/MP/examenesResueltos/septiembre2012/nbproject/private/Default-build.log
g++ -g -c -o obj/prueba.o src/prueba.cpp -I./include
src/prueba.cpp:3:23: error fatal: polinomio.h: No existe el fichero o el directorio
 #include "polinomio.h"
                       ^
compilación terminada.
Makefile:8: recipe for target 'prueba.o' failed
gmake: *** [prueba.o] Error 1
